# flask-tailwind

./: .flake8  .gitignore  README.md  config.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
flask_tailwind/: __init__.py  config.py  models.py  routes.py
flask_tailwind/main/: __init__.py  views.py
flask_tailwind/main/templates/main/: index.html
flask_tailwind/templates/: base.html
tests/: test_factory.py  test_flask_tailwind.py
